src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail43.jova

class Main {

  public int main() {
    bool test;
    bool test2;
    int x;
    bool boolean;
    int integer;
    int value;
    String wort;

    boolean = true;
    wort = "bla";
    value = 5;
    test = wort > 3;
    test = wort > value;
    test = nix > value;
    test = value > wort;
    test = value > nix;
    test = wort > boolean;
    test = 2 + 5 > 3 + wort;
    test = 2 + 5 > 3 + nix;
    test = 2 + wort > value + 8;
    test = 2 + nix > value + 8;
    test = value + 5 > 3 + wort;
    test = value + 5 > 3 + nix;
    test = 2 < wort;
    test = 2 < nix;
    test = wort < 3;
    test = 2 < wort;
    test = value < wort;
    test = value < nix;
    test = 2 + 5 < 3 + wort;
    test = wort + 5 < 3 + value;
    test = nix + 5 < 3 + value;
    test = wort <= 3;
    test = nix <= 3;
    test = value <= wort;
    test = wort <= value;
    test = 2 + 5 >= wort + 8;

    // arithmetic
    integer = 3;
    x = 2 + wort;
    x = wort + integer;
    x = nix + integer;
    x = wort + 3;
    x = integer - wort;
    x = integer - nix;
    x = 3 - wort;
    x = integer - wort;
    x = integer - nix;
    x = 3 - wort;
    x = wort / integer;
    x = nix / integer;
    x = wort / 3;
    x = integer / wort;
    x = wort / 3;
    x = integer % wort;
    x = integer % nix;
    x = wort % 3;
    x = nix % 3;
    x = integer % wort;
    x = 4 * wort;
    x = 4 * nix;
    x = wort * 3;
    x = nix * 3;
    x = wort * integer;
    x = "wort" * integer;
    x = "wort" * integer;
    x = wort * nix;

    //logic
    boolean = false;
    test2 = !(wort);
    test2 = true && wort;
    test2 = wort && boolean;
    test2 = "wort" && boolean;
    test2 = nix && boolean;
    test2 = true || wort;
    test2 = true || nix;
    test2 = wort || boolean;
    test2 = "wort" || boolean;
    test2 = wort || wort;
    test2 = boolean || wort;
    test2 = boolean || nix;

    return 0;
  }

}